Fixed contact form box-shadows on ios safari

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -417,6 +417,8 @@ p
             padding: 2rem
 
         input
+            appearance: none
+            -webkit-appearance: none
             font-size: 1.8rem
             padding: 1rem
             margin: 0.4rem 0.4rem
